--- a/yes.html
+++ b/yes.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="gif_container">
         <img
-          src="https://i.postimg.cc/ydj8MGT3/bear-kiss-bear-kisses.gif"
+          src="1.gif"
           alt="Cute animated illustration"
         />
       </div>
