--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Do you love me?</title>
+    <title>Do you like me?</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -73,7 +73,7 @@
     >
       <h1>Will You Be My Valentine?</h1>
       <img
-        src="https://i.postimg.cc/DZkw7g5n/output-onlinegiftools.gif"
+        src="2.gif"
         alt=""
       />
       <button
@@ -109,7 +109,7 @@
       </div>
     </div>
     <p class="mainn">
-      <a href="https://www.instagram.com/untoldcoding/">Made by UntoldCoding</a>
+      <a ">#tzan</a>
     </p>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script>
